feat: java 17 migration